--- a/Webpage/style_main.css
+++ b/Webpage/style_main.css
@@ -45,6 +45,12 @@ div{
   grid-row: span 2;
 }
 
+video {
+  /* max-width: 100%;
+  max-height: 100%; */
+  height: 130px;
+}
+
 @media(max-width:800px) {
   .container{
     display: block;
