--- a/Webpage Step01/css/style_main.css
+++ b/Webpage Step01/css/style_main.css
@@ -52,9 +52,9 @@ div{
 }
 
 video {
-  /* max-width: 100%;
-  max-height: 100%; */
-  height: 130px;
+  /* max-width: 100%;*/
+  max-height: 180%;
+  width: auto;
 }
 
 @media(max-width:800px) {
