--- a/Webpage Step01/css/style_index.css
+++ b/Webpage Step01/css/style_index.css
@@ -13,7 +13,7 @@ h1 {
   color:linen;
   font-size: 45px;
   text-align: center;
-  border-bottom: 1px solid gray;
+  /* border-bottom: 1px solid gray; */
   margin: 0;
   padding: 20px;
 }
